latex2mmlc/src/snapshots/latex2mmlc__tests__mathrm_nested4.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathit{\\mathrm{a}}"
---
<math>
    <mi mathvariant="normal">a</mi>
</math>
