latex2mmlc/src/snapshots/latex2mmlc__tests__mathrm_no_brackets.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathrm x"
---
<math>
    <mi mathvariant="normal">x</mi>
</math>
