latex2mmlc/src/snapshots/latex2mmlc__tests__mathrm_with_sin.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathrm{x\\sin}"
---
<math>
    <mrow>
        <mi mathvariant="normal">x</mi>
        <mi>sin</mi>
    </mrow>
</math>
