latex2mmlc/src/snapshots/latex2mmlc__tests__mathrm_with_sin2.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathrm{\\sin x}"
---
<math>
    <mrow>
        <mi>sin</mi>
        <mi mathvariant="normal">x</mi>
    </mrow>
</math>
