latex2mmlc/src/snapshots/latex2mmlc__tests__mathrm_with_superscript.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathrm{x}^2"
---
<math>
    <msup>
        <mi mathvariant="normal">x</mi>
        <mn>2</mn>
    </msup>
</math>
