latex2mmlc/src/snapshots/latex2mmlc__tests__mathstrut.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathstrut"
---
<math>
    <mpadded width="0" style="visibility:hidden"><mo stretchy="false">(</mo></mpadded>
</math>
