latex2mmlc/src/snapshots/latex2mmlc__tests__mid.snap
---
source: latex2mmlc/src/lib.rs
expression: "P(x\\mid y)"
---
<math>
    <mi>P</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo>∣</mo>
    <mi>y</mi>
    <mo stretchy="false">)</mo>
</math>
