latex2mmlc/src/snapshots/latex2mmlc__tests__middle_uparrow.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\left(\\frac12\\middle\\uparrow\\frac12\\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mrow>
            <mfrac>
                <mn>1</mn>
                <mn>2</mn>
            </mfrac>
            <mo stretchy="true">↑</mo>
            <mfrac>
                <mn>1</mn>
                <mn>2</mn>
            </mfrac>
        </mrow>
        <mo>)</mo>
    </mrow>
</math>
