latex2mmlc/src/snapshots/latex2mmlc__tests__mismatched_begin_end.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\begin{matrix} 1 \\end{bmatrix}"
---
MismatchedEnvironment {
    expected: "matrix",
    got: "bmatrix",
}
